# Pero-Que-Putas

./: .gitignore  README.md
Context/PQP/: app-overview.md  (+2 more)
client/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: db.py  dev.sh  e2e.sh
server/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 8ff28e7da4d6_esquema_inicial.py  b3d1c07a52e4_agrega_enunciado_a_preguntas.py  c7e4a91f30d8_agrega_eliminada_a_preguntas.py  e5a2d84fb17c_agrega_sesiones.py
server/app/: config.py  constants.py  database.py  errores.py  main.py  manejadores.py  seguridad.py
server/app/bots/: fabrica.py  jugador.py  registro.py
server/app/models/: __init__.py  marcador.py  pregunta.py  ronda.py  sala.py  sesion.py  usuario.py
server/app/routers/: constantes.py  preguntas.py  puntos.py  salas.py  sesiones.py  usuarios.py
server/app/schemas/: constantes.py  juego.py  pregunta.py  puntos.py  sala.py  sesion.py  usuario.py
server/app/services/: juego.py  marcador.py  preguntas.py  salas.py  sesiones.py  usuarios.py
server/app/websocket/: eventos.py  manager.py  router.py
server/tests/: apoyo.py  conftest.py  test_bots_runtime.py  test_constantes.py  test_e2e.py  test_finalizar_atomico.py  test_juego.py  test_juego_websocket.py  test_practica_e2e.py  test_preguntas.py  test_puntos_marcador.py  test_robustez.py  test_salas.py  test_salas_practica.py  test_salud.py  test_sesiones.py  test_usuarios.py  test_websocket.py
(+63 files in other folders)
